gap fixed

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@
 
 .nav_links{
   display: flex;
-  gap: 1.5rem;
   /* align-items: center; */
   justify-content: center;
   margin: 1.5rem 20rem;
@@ -29,6 +28,7 @@
 li {
   list-style: none;
   font-size: 1.23rem;
+  margin: 0 1rem;
 }
 
 li>a {
@@ -188,7 +188,7 @@ li>a:hover {
 
   /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
-  gap: 2rem;
+ 
   margin: 1rem;
   text-align: center;
 }
@@ -358,7 +358,6 @@ li>a:hover {
 }
 
 .boxes2 {
-  gap: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -398,9 +397,11 @@ li>a:hover {
 .machene {
   display: flex;
   align-items: center;
-  gap: 2rem;
+ 
 }
-
+.facility_dialysisi{
+  margin-left: 1.3rem;
+}
 .facility_dialysisi h2 {
   margin: 2rem 1rem;
   font-size: 2.5rem;
@@ -432,6 +433,7 @@ li>a:hover {
   padding: 2rem;
   width: 22rem;
   text-align: center;
+  margin: 2rem;
 }
 
 .boxS img {
@@ -494,7 +496,6 @@ li>a:hover {
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .test_head h2 {
@@ -515,6 +516,7 @@ li>a:hover {
   text-align: center;
   background-color: rgba(118, 118, 238,0.2);
   box-shadow: 5px 4px 7px black;
+  margin: 1.2rem;
 }
 
 .content p{
@@ -531,17 +533,16 @@ li>a:hover {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
-  margin: 2rem 0;
+  margin: 2rem ;
 }
 .form_container{
   margin: 7rem 0;
   display: flex;
-  gap: 1rem;
+  
 }
 .form_container img{
   width: 50%;
-
+  margin-right: 1rem;
 }
 form{
   display: flex;
